Correct Naming Added for Controllers and Pkg directories
