# docs/swagger.yaml
@@ -22,13 +22,7 @@ definitions:
     required:
     - isCompleted
     type: object
-  authentication.ResponseJson:
-    properties:
-      message:
-        example: Success
-        type: string
-    type: object
-  authentication.User:
+  Todo.User:
     properties:
       password:
         type: string
@@ -171,8 +165,21 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/authentication.ResponseJson'
+            $ref: '#/definitions/Todo.ResponseJson'
       summary: GetUserById
+  /Home:
+    get:
+      consumes:
+      - application/json
+      description: Sign-In with user credentials, for generated access token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/Todo.ResponseJson'
+      summary: Home
   /Login:
     post:
       consumes:
@@ -184,14 +191,14 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/authentication.User'
+          $ref: '#/definitions/Todo.User'
       produces:
       - application/json
       responses:
         "200":
           description: Successful
           schema:
-            $ref: '#/definitions/authentication.ResponseJson'
+            $ref: '#/definitions/Todo.ResponseJson'
       summary: Login
   /Register:
     post:
@@ -204,14 +211,14 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/authentication.User'
+          $ref: '#/definitions/Todo.User'
       produces:
       - application/json
       responses:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/authentication.ResponseJson'
+            $ref: '#/definitions/Todo.ResponseJson'
       summary: Register
   /TaskCompleted/{id}:
     put:
